Fix contrast issues

--- a/components/buttons/button-primary/button-primary.less
+++ b/components/buttons/button-primary/button-primary.less
@@ -7,7 +7,7 @@
 	.btn-basis;
 	margin-bottom: @spacing-small;
 	border: 1px solid @red;
-	background-color: @red;
+	background-color: @black;
 	color: @white;
 
 	&:hover:enabled {
